updating top repositories

--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ social_media:
   # twitter: your_username
   # unsplash: your_username
   # vk: your_username
-  # website: http://your_website_url
+  # website: http://your_website_url//
   # youtube: your_username
 
 # topics:
