--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,13 @@ defaults:
       layout: "post"
 
 projects:
-  sort_by: stars
+  sort_by: pushed
   # sort_by options:
   #   - pushed
   #   - stars
-  limit: 9
+  limit: 6
   exclude:
-    archived: false
+    archived: true
     forks: true
     projects:
     # - repo-name
